--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <header>
+    <title> 
+      Morteza Zakeri Blog
+    </title>
+  </header>
 <body>
 <h1>Morteza Zakeri</h1>
 <p>Welcome to my blog on github</p>
