--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
   <header>
     <title> 
-      Morteza Zakeri Blog
+      Morteza Zakeri GitBlog
     </title>
   </header>
 <body>
 <h1>Morteza Zakeri</h1>
 <p>Welcome to my blog on github</p>
+  <br>
+  <p> <b> Posts: </b> </p>
+  <br>
+  <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" > 
+    Sequence to Sequence Learning with Neural Networks
+  </a>
+  
 </body>
 </html>
