--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Morteza Zakeri</h1>
 <p>Welcome to my blog on github</p>
-  <br>
-  <p> <b> Posts: </b> </p>
-  <br>
+  
+  <h3> <b> Posts: </b> </h3>
+  
   <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" > 
     Sequence to Sequence Learning with Neural Networks
   </a>
