Set the template.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
-<!DOCTYPE html>
-<html>
-  <header>
-    <title> 
-      Morteza Zakeri GitBlog
-    </title>
-  </header>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<title>Blue Bliss by Bryant Smith</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="./css/mainpage.css" />
+</head>
 <body>
-<h1>Morteza Zakeri</h1>
-<p>Welcome to my blog on github</p>
-  
-  <h3> <b> Posts: </b> </h3>
-  
-  <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" > 
-    Sequence to Sequence Learning with Neural Networks
-  </a>
-  
+<div id="mainContentArea">
+	<div id="contentBox">
+        <div id="title"> Morteza ZAKERI GitBlog </div>
+
+        <div id="linkGroup">
+            <div class="link"><a href="index.html">Home</a></div>
+            <div class="link"><a href="index.html">About</a></div>
+        </div>
+
+        <div id="blueBox">
+          <div id="header"></div>
+          <div class="contentTitle">Morteza ZAKERI</div>
+            <div class="pageContent">
+                <p>
+                    Welcome to my blog. I study software engineering at Iran University of Science
+                    and Technology(IUST). Here I share some of my projects and blog post about computer and programming.
+                </p>
+                <p>
+                    Blog posts (in persian):
+                    <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
+                        Sequence to Sequence Learning with Neural Networks
+                    </a>
+                </p>
+
+            </div>
+            <div id="footer">
+                <a href="http://www.aszx.net">web development</a>
+                by <a href="http://www.bryantsmith.com">bryant</a>
+            </div>
+        </div>
+	</div>
+</div>
 </body>
 </html>
