Set the template.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="mainContentArea">
 	<div id="contentBox">
-        <div id="title"> Morteza ZAKERI GitBlog </div>
+        <div id="title"> Morteza ZAKERI </div>
 
         <div id="linkGroup">
             <div class="link"><a href="index.html">Home</a></div>
@@ -18,7 +18,7 @@
 
         <div id="blueBox">
           <div id="header"></div>
-          <div class="contentTitle">Morteza ZAKERI</div>
+          <div class="contentTitle">Welcome</div>
             <div class="pageContent">
                 <p>
                     Welcome to my blog. I study software engineering at Iran University of Science
