Set the template.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-
+<!--
+- ZAKERI blog on github.
+- The main page.
+-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>Blue Bliss by Bryant Smith</title>
+	<title>Morteza Zakeri GitBlog</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="./css/mainpage.css" />
 </head>
@@ -13,24 +16,40 @@
 
         <div id="linkGroup">
             <div class="link"><a href="index.html">Home</a></div>
-            <div class="link"><a href="index.html">About</a></div>
+            <div class="link"><a href="https://github.com/m-zakeri/" target="_blank">Projects</a></div>
         </div>
 
         <div id="blueBox">
           <div id="header"></div>
-          <div class="contentTitle">Welcome</div>
+          <div class="contentTitle">Home</div>
             <div class="pageContent">
                 <p>
-                    Welcome to my blog. I study software engineering at Iran University of Science
-                    and Technology(IUST). Here I share some of my projects and blog post about computer and programming.
+                    Welcome to my blog. I study software engineering at
+                    <a href="http://www.iust.ac.ir/"> Iran University of Science and Technology (IUST) </a>.
+                        Here I share some of my projects and blog post about my works and projects.
+
                 </p>
                 <p>
                     Blog posts (in persian):
-                    <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
-                        Sequence to Sequence Learning with Neural Networks
-                    </a>
-                </p>
-
+                <p>
+                <ul>
+                    <li>
+                        <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
+                        A survey of sequence-to-sequence learning with neural networks
+                        </a>
+                        - Fall 2017
+                    </li>
+                </ul>
+                <p>
+                    Useful links:
+                <p>
+                <ul>
+                    <li>
+                        <a href="https://github.com/m-zakeri/" target="_blank" >
+                        My github projects
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div id="footer">
                 <a href="http://www.aszx.net">web development</a>
