Set the template.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="pageContent">
                 <p>
                     Welcome to my blog. I study software engineering at
-                    <a href="http://www.iust.ac.ir/"> Iran University of Science and Technology (IUST) </a>.
+                    <a href="http://www.iust.ac.ir/" target="_blank"> Iran University of Science and Technology (IUST) </a>.
                         Here I share some of my projects and blog post about my works and projects.
 
                 </p>
