Set the template.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                     Welcome to my blog. I study software engineering at
                     <a href="http://www.iust.ac.ir/" target="_blank"> Iran University of Science and Technology (IUST) </a>.
                         Here I share some of my projects and blog post about my works and projects.
-
                 </p>
                 <p>
                     Blog posts (in persian):
@@ -46,14 +45,25 @@
                 <ul>
                     <li>
                         <a href="https://github.com/m-zakeri/" target="_blank" >
-                        My github projects
+                        My github projects [new]
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/mortazazakeri" target="_blank" >
+                        My github projects [old]
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://gist.github.com/m-zakeri" target="_blank" >
+                        My gist (code snip)
                         </a>
                     </li>
                 </ul>
+                <br>
             </div>
             <div id="footer">
-                <a href="http://www.aszx.net">web development</a>
-                by <a href="http://www.bryantsmith.com">bryant</a>
+                © 2018 Morteza ZAKERI - Theme By
+                <a href="http://www.aszx.net" target="_blank"> Web Development</a>
             </div>
         </div>
 	</div>
