Set the template.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="linkGroup">
             <div class="link"><a href="index.html">Home</a></div>
             <div class="link"><a href="https://github.com/m-zakeri/" target="_blank">Projects</a></div>
+            <div class="link"><a href="contact.html">Contact</a></div>
         </div>
 
         <div id="blueBox">
@@ -25,11 +26,14 @@
             <div class="pageContent">
                 <p>
                     Welcome to my blog. I study software engineering at
-                    <a href="http://www.iust.ac.ir/" target="_blank"> Iran University of Science and Technology (IUST) </a>.
-                        Here I share some of my projects and blog post about my works and projects.
+                    <a href="http://www.iust.ac.ir/" target="_blank"> Iran University of Science and Technology (IUST)</a>.
+                    I have got my B.Sc. in Software Engineering from Arak University.
+                    Here I share some of my academic works and projects with you.
+                    There is no commenting tool at this blog right now and you can contact me by email
+                    <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
                 </p>
                 <p>
-                    Blog posts (in persian):
+                    Research and Technical Reports (in persian):
                 <p>
                 <ul>
                     <li>
@@ -58,12 +62,19 @@
                         My gist (code snip)
                         </a>
                     </li>
+                <br>
+                    <li>
+                        <a href="http://micropedia.ir" target="_blank" >
+                        Micropedia
+                        </a>
+                    </li>
                 </ul>
                 <br>
             </div>
             <div id="footer">
                 © 2018 Morteza ZAKERI - Theme By
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
+                <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank"> Source </a>
             </div>
         </div>
 	</div>
