Set the template.

--- a/contact.html
+++ b/contact.html
@@ -33,23 +33,14 @@
                         E-mail:
                         <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
                     </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
-                        LinkedIn Profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://zakerim.webs.com/" target="_blank" >
-                        My old blog
-                        </a>
-                    </li>
+
                 </ul>
 
             </div>
             <div id="footer">
                 © 2018 Morteza ZAKERI - Theme By
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
-                <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank"> Source </a>
+                <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank">  - Source on Github </a>
             </div>
         </div>
 	</div>
