--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
             <div class="pageContent">
                 <p>
                     Welcome to my blog. I study software engineering at
-                    <a href="http://www.iust.ac.ir/" target="_blank"> Iran University of Science and Technology (IUST)</a>.
-                    I have got my B.Sc. in Software Engineering from Arak University.
+                    <a href="http://www.iust.ac.ir/en" target="_blank"> Iran University of Science and Technology (IUST)</a>.
+                    I have got my B.Sc. in Software Engineering from <a href="http://en.araku.ac.ir/" target="_blank">
+                    Arak University</a>.
                     Here I share some of my academic works and projects with you.
                     There is no commenting tool at this blog right now and you can contact me by email
+                </p>
+                <p>
                     <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
                 </p>
                 <p>
@@ -43,6 +46,22 @@
                         - Fall 2017
                     </li>
                 </ul>
+                <p>
+                    Have a programming question? Join us:
+                </p>
+                <ul>
+                    <li>
+                        <a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" target="_blank" >
+                        Micropedia code group on telegram
+                        </a>
+                    </li>
+                    <li>
+                        <a href="micropedia.ir/tutorials/" target="_blank" >
+                        Micropedia programming tutorials
+                        </a>
+                    </li>
+                </ul>
+
                 <p>
                     Useful links:
                 <p>
@@ -68,13 +87,33 @@
                         Micropedia
                         </a>
                     </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
+                        My LinkedIn profile
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://zakerim.webs.com/" target="_blank" >
+                        My old blog
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.slideshare.net/MortezaZakeri" target="_blank" >
+                        SlideShare
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://micropedia.ir/download/" target="_blank" >
+                        Other resource and slides
+                        </a>
+                    </li>
                 </ul>
                 <br>
             </div>
             <div id="footer">
                 © 2018 Morteza ZAKERI - Theme By
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
-                <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank"> Source </a>
+                <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank">  - Source on Github </a>
             </div>
         </div>
 	</div>
