Set the template.

--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,16 @@
 
                 <ul>
                     <li>
+                        Address:
+                        <b>
+                            Tehran, Narmak, Iran University of Science and Technology,
+                            School of Computer Engineering, 2nd Floor, Reverse Engineering Research Laboratory.
+                        </b>
+                    </li>
+                    <li>
                         E-mail:
                         <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
                     </li>
-
                 </ul>
 
             </div>
