--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
                     I have got my B.Sc. in Software Engineering from <a href="http://en.araku.ac.ir/" target="_blank">
                     Arak University</a>.
                     Here I share some of my academic works and projects with you.
+                    From summer 2013 my friends and I also maintain <a href="http://micropedia.ir/" target="_blank">Micropedia</a>
+                    a free software engineering/ programming tutorials website in persian. You can find some basic programming tutorials
+                    on Micropedia.
                     There is no commenting tool at this blog right now and you can contact me by email
                 </p>
-                <p>
+                <br>
                     <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
-                </p>
                 <p>
                     Research and Technical Reports (in persian):
                 <p>
@@ -56,8 +58,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="micropedia.ir/tutorials/" target="_blank" >
-                        Micropedia programming tutorials
+                        <a href="http://micropedia.ir/tutorials/" target="_blank" >
+                        Micropedia programming tutorials (in persian)
                         </a>
                     </li>
                 </ul>
@@ -83,11 +85,6 @@
                     </li>
                 <br>
                     <li>
-                        <a href="http://micropedia.ir" target="_blank" >
-                        Micropedia
-                        </a>
-                    </li>
-                    <li>
                         <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
                         My LinkedIn profile
                         </a>
@@ -99,12 +96,12 @@
                     </li>
                     <li>
                         <a href="https://www.slideshare.net/MortezaZakeri" target="_blank" >
-                        SlideShare
+                        My SlideShare
                         </a>
                     </li>
                     <li>
                         <a href="http://micropedia.ir/download/" target="_blank" >
-                        Other resource and slides
+                        Other resources and materials
                         </a>
                     </li>
                 </ul>
