Set the template.

--- a/contact.html
+++ b/contact.html
@@ -25,26 +25,26 @@
           <div class="contentTitle">Contact</div>
             <div class="pageContent">
                 <p>
-
+                    My current location and contact information:
                 </p>
 
                 <ul>
                     <li>
                         Address:
-                        <b>
+
                             Tehran, Narmak, Iran University of Science and Technology,
                             School of Computer Engineering, 2nd Floor, Reverse Engineering Research Laboratory.
-                        </b>
+
                     </li>
                     <li>
                         E-mail:
-                        <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
+                        M - Z A K E R I [AT] L I V E [DOT] C O M
                     </li>
                 </ul>
-
             </div>
+            <br>
             <div id="footer">
-                © 2018 Morteza ZAKERI - Theme By
+                © 2017-18 Morteza ZAKERI - Theme By
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
                 <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank">  - Source on Github </a>
             </div>
