--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div id="header"></div>
           <div class="contentTitle">Home</div>
             <div class="pageContent">
+
                 <p>
                     Welcome to my blog. I study software engineering at
                     <a href="http://www.iust.ac.ir/en" target="_blank"> Iran University of Science and Technology (IUST)</a>.
@@ -34,81 +35,101 @@
                     a free software engineering/ programming tutorials website in persian. You can find some basic programming tutorials
                     on Micropedia.
                     There is no commenting tool at this blog right now and you can contact me by email
+                    <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>.
                 </p>
-                <br>
-                    <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>
+
                 <p>
-                    Research and Technical Reports (in persian):
+                    <ul>
+                        <li>
+                            <a href = "https://www.dropbox.com/s/uskbycwjukva3ag/Zakeri_Resume_970112_EN.pdf?dl=0" >
+                            My last résumé update [English-PDF]
+                            </a>
+                            - April 2018
+                        </li>
+                        <li>
+                            <a href = "https://www.dropbox.com/s/7zpxl68sx68cb3u/Zakeri_Resume_961201_FA.pdf?dl=0" >
+                            My last résumé update [Persian-PDF]
+                            </a>
+                            - March 2017
+                        </li>
+                    </ul>
+                </p>
+
                 <p>
-                <ul>
-                    <li>
-                        <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
-                        A survey of sequence-to-sequence learning with neural networks
-                        </a>
-                        - Fall 2017
-                    </li>
-                </ul>
+                    Research and Technical Reports (Persian):
+                    <ul>
+                        <li>
+                            <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
+                            A survey of sequence-to-sequence learning with neural networks
+                            </a>
+                            - Fall 2017
+                        </li>
+                    </ul>
+                <p>
+
                 <p>
                     Have a programming question? Join us:
+                    <ul>
+                        <li>
+                            <a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" target="_blank" >
+                            Micropedia code group on telegram
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://micropedia.ir/tutorials/" target="_blank" >
+                            Micropedia programming tutorials (Persian)
+                            </a>
+                        </li>
+                    </ul>
                 </p>
-                <ul>
-                    <li>
-                        <a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" target="_blank" >
-                        Micropedia code group on telegram
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://micropedia.ir/tutorials/" target="_blank" >
-                        Micropedia programming tutorials (in persian)
-                        </a>
-                    </li>
-                </ul>
 
                 <p>
                     Useful links:
-                <p>
-                <ul>
-                    <li>
-                        <a href="https://github.com/m-zakeri/" target="_blank" >
-                        My github projects [new]
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/mortazazakeri" target="_blank" >
-                        My github projects [old]
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://gist.github.com/m-zakeri" target="_blank" >
-                        My gist (code snip)
-                        </a>
-                    </li>
-                <br>
-                    <li>
-                        <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
-                        My LinkedIn profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://zakerim.webs.com/" target="_blank" >
-                        My old blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.slideshare.net/MortezaZakeri" target="_blank" >
-                        My SlideShare
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://micropedia.ir/download/" target="_blank" >
-                        Other resources and materials
-                        </a>
-                    </li>
-                </ul>
-                <br>
+                    <ul>
+                        <li>
+                            <a href="https://github.com/m-zakeri/" target="_blank" >
+                            My github projects [new]
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/mortazazakeri" target="_blank" >
+                            My github projects [old]
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://gist.github.com/m-zakeri" target="_blank" >
+                            My gist (code snip)
+                            </a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="http://zakerim.webs.com/" target="_blank" >
+                            My old blog
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
+                            My LinkedIn profile
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.slideshare.net/MortezaZakeri" target="_blank" >
+                            My SlideShare profile
+                            </a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="http://micropedia.ir/download/" target="_blank" >
+                            Other resources and materials
+                            </a>
+                        </li>
+                    </ul>
+                </p>
+
             </div>
+            <br>
             <div id="footer">
-                © 2018 Morteza ZAKERI - Theme By
+                © 2017-18 Morteza ZAKERI - Theme by
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
                 <a href="https://github.com/m-zakeri/m-zakeri.github.io" target="_blank">  - Source on Github </a>
             </div>
