--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
                 <p>
                     Welcome to my blog. I study software engineering at
                     <a href="http://www.iust.ac.ir/en" target="_blank"> Iran University of Science and Technology (IUST)</a>.
-                    I have got my B.Sc. in Software Engineering from <a href="http://en.araku.ac.ir/" target="_blank">
+                    I have got my B.Sc. in computer engineering/ software from
+                    <a href="http://en.araku.ac.ir/" target="_blank">
                     Arak University</a>.
                     Here I share some of my academic works and projects with you.
-                    From summer 2013 my friends and I also maintain <a href="http://micropedia.ir/" target="_blank">Micropedia</a>
-                    a free software engineering/ programming tutorials website in persian. You can find some basic programming tutorials
-                    on Micropedia.
-                    There is no commenting tool at this blog right now and you can contact me by email
+                    From summer 2013 my friends and I also maintain
+                    <a href="http://micropedia.ir/" target="_blank">Micropedia</a>
+                    a free software engineering/ programming tutorials website in persian.
+                    You can find some basic programming tutorials on Micropedia.
+                    There is no commenting tool at this blog right now and you can contact me by email to
                     <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>.
                 </p>
 
