Complete homepage and links.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     a free software engineering/ programming tutorials website in persian.
                     You can find some basic programming tutorials on Micropedia.
                     There is no commenting tool at this blog right now and you can contact me by email to
-                    <b>M - Z A K E R I [AT] L I V E [DOT] C O M</b>.
+                    M - Z A K E R I [AT] L I V E [DOT] C O M.
                 </p>
 
                 <p>
@@ -56,7 +56,7 @@
                         </li>
                     </ul>
                 </p>
-
+                <hr>
                 <p>
                     Research and Technical Reports (Persian):
                     <ul>
