Complete homepage and links.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
 
                 <p>
                     Welcome to my blog. I study software engineering at
-                    <a href="http://www.iust.ac.ir/en" target="_blank"> Iran University of Science and Technology (IUST)</a>.
+                    <a href="http://www.iust.ac.ir/en" target="_blank">
+                        Iran University of Science and Technology (IUST)
+                    </a>.
                     I have got my B.Sc. in computer engineering/ software from
                     <a href="http://en.araku.ac.ir/" target="_blank">
-                    Arak University</a>.
+                        Arak University
+                    </a>.
                     Here I share some of my academic works and projects with you.
                     From summer 2013 my friends and I also maintain
-                    <a href="http://micropedia.ir/" target="_blank">Micropedia</a>
+                    <a href="http://micropedia.ir/" target="_blank">
+                        Micropedia
+                    </a>
                     a free software engineering/ programming tutorials website in persian.
                     You can find some basic programming tutorials on Micropedia.
                     There is no commenting tool at this blog right now and you can contact me by email to
@@ -44,13 +49,13 @@
                     <ul>
                         <li>
                             <a href = "https://www.dropbox.com/s/uskbycwjukva3ag/Zakeri_Resume_970112_EN.pdf?dl=0" >
-                            My last résumé update [English-PDF]
+                            My résumé [English-PDF]
                             </a>
                             - April 2018
                         </li>
                         <li>
                             <a href = "https://www.dropbox.com/s/7zpxl68sx68cb3u/Zakeri_Resume_961201_FA.pdf?dl=0" >
-                            My last résumé update [Persian-PDF]
+                            My résumé [Persian-PDF]
                             </a>
                             - March 2017
                         </li>
