Complete homepage and links.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
         <div id="linkGroup">
             <div class="link"><a href="index.html">Home</a></div>
-            <div class="link"><a href="https://github.com/m-zakeri/" target="_blank">Projects</a></div>
+            <div class="link"><a href="links.html">Links</a></div>
             <div class="link"><a href="contact.html">Contact</a></div>
         </div>
 
