--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div id="linkGroup">
             <div class="link"><a href="index.html">Home</a></div>
-            <div class="link"><a href="https://github.com/m-zakeri/" target="_blank">Projects</a></div>
+            <div class="link"><a href="links.html">Links</a></div>
             <div class="link"><a href="contact.html">Contact</a></div>
         </div>
 
@@ -26,15 +26,30 @@
             <div class="pageContent">
 
                 <p>
-                    Welcome to my blog. I study software engineering at
+                    Welcome to my blog. I study master of computer engineering at
                     <a href="http://www.iust.ac.ir/en" target="_blank">
-                        Iran University of Science and Technology (IUST)
-                    </a>.
+                        Iran University of Science and Technology (IUST)</a>.
                     I have got my B.Sc. in computer engineering/ software from
                     <a href="http://en.araku.ac.ir/" target="_blank">
                         Arak University
                     </a>.
                     Here I share some of my academic works and projects with you.
+                </p>
+                <p>
+                    My research interest is about Automate Software Engineering (ASE),
+                    specially automate software testing. Currently, I has focused on fuzz testing and
+                    test data generation in file format fuzzers. I want to use deep neural networks
+                    to statistically capture the format of highly complex file structures
+                    and then build a generative model to generate new test data.
+                    It seems that there is a straight relationship between well-formed files and percentage of
+                    code coverage when Software Under Test (SUT) was executed with such files as input.
+                </p>
+                <p>
+                    I am a member of IUST Reverse Engineering Laboratory and work under the supervision of
+                    Dr. Saeed Parsa.
+                    You can find and read more information <a href="http://parsa.iust.ac.ir" target="_blank"> here </a>.
+                </p>
+                <p>
                     From summer 2013 my friends and I also maintain
                     <a href="http://micropedia.ir/" target="_blank">
                         Micropedia
@@ -62,76 +77,7 @@
                     </ul>
                 </p>
                 <hr>
-                <p>
-                    Research and Technical Reports (Persian):
-                    <ul>
-                        <li>
-                            <a href = "https://m-zakeri.github.io/post/sequence_to_sequence_learning_with_neural_networks.html" >
-                            A survey of sequence-to-sequence learning with neural networks
-                            </a>
-                            - Fall 2017
-                        </li>
-                    </ul>
-                <p>
 
-                <p>
-                    Have a programming question? Join us:
-                    <ul>
-                        <li>
-                            <a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" target="_blank" >
-                            Micropedia code group on telegram
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://micropedia.ir/tutorials/" target="_blank" >
-                            Micropedia programming tutorials (Persian)
-                            </a>
-                        </li>
-                    </ul>
-                </p>
-
-                <p>
-                    Useful links:
-                    <ul>
-                        <li>
-                            <a href="https://github.com/m-zakeri/" target="_blank" >
-                            My github projects [new]
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/mortazazakeri" target="_blank" >
-                            My github projects [old]
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://gist.github.com/m-zakeri" target="_blank" >
-                            My gist (code snip)
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a href="http://zakerim.webs.com/" target="_blank" >
-                            My old blog
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank" >
-                            My LinkedIn profile
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.slideshare.net/MortezaZakeri" target="_blank" >
-                            My SlideShare profile
-                            </a>
-                        </li>
-                        <br>
-                        <li>
-                            <a href="http://micropedia.ir/download/" target="_blank" >
-                            Other resources and materials
-                            </a>
-                        </li>
-                    </ul>
-                </p>
 
             </div>
             <br>
