Complete homepage and links.

--- a/contact.html
+++ b/contact.html
@@ -30,19 +30,18 @@
 
                 <ul>
                     <li>
-                        Address:
-
+                        <b>Address:</b>
                             Tehran, Narmak, Iran University of Science and Technology,
                             School of Computer Engineering, 2nd Floor, Reverse Engineering Research Laboratory.
-
                     </li>
                     <li>
-                        E-mail:
+                        <b>E-mail:</b>
                         M - Z A K E R I [AT] L I V E [DOT] C O M
                     </li>
                 </ul>
             </div>
             <br>
+
             <div id="footer">
                 © 2017-18 Morteza ZAKERI - Theme By
                 <a href="http://www.aszx.net" target="_blank"> Web Development</a>
