--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     <a href="http://www.iust.ac.ir/en" target="_blank">
                         Iran University of Science and Technology (IUST)</a>.
                     I have got my B.Sc. in computer engineering/ software from
-                    <a href="http://en.araku.ac.ir/" target="_blank">
-                        Arak University
-                    </a>.
+                    <a href="http://en.araku.ac.ir/" target="_blank"> Arak University</a>.
                     Here I share some of my academic works and projects with you.
                 </p>
                 <p>
@@ -45,9 +43,9 @@
                     code coverage when Software Under Test (SUT) was executed with such files as input.
                 </p>
                 <p>
-                    I am a member of IUST Reverse Engineering Laboratory and work under the supervision of
+                    I am a member of IUST Reverse Engineering Research Laboratory and work under the supervision of
                     Dr. Saeed Parsa.
-                    You can find and read more information <a href="http://parsa.iust.ac.ir" target="_blank"> here </a>.
+                    You can find and read more information <a href="http://parsa.iust.ac.ir" target="_blank"> here</a>.
                 </p>
                 <p>
                     From summer 2013 my friends and I also maintain
